--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sandisiwe Mxabani - Portfolio </title>
+    <title> Sandisiwe Mxabani - Portfolio </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
 
-        <h1>Hi, I'm Sandisiwe Mxabani.<h1>
-            <p>Welcome to my portfolio website! Glad to see you here. </p>
+        <h1>Hi, I'm Sandisiwe Mxabani.</h1>
+            <p>Welcome to my portfolio website! Glad to see you here.</p>
     </header>
 
     <section class="about-me">
@@ -19,13 +20,14 @@
             <h2>My Projects</h2>
             <ul>
                 <li>Portfolio website</li>
-                <li>Game App</li>
-                <li>Todo List</li>
-                <li>calculator App</li>      
-            </ul>
+                <div class="project list">
+                    <div class="project-card">
+                        <h3>Portfolio Website</h3>
+                        <p>A personal website to showcase our projects, skills and background</p>
+                    <a href="#" View Project></a>
                 
     
 </body>
     <footer>
-        <p>Contact me at: 0740711044 or sandy.mxabani@gmail.com
+        <p>Contact me at: 0740711044 or sandymxabani@gmail.com></p>
 </html>
