--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandisiwe Mxabani - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,13 +17,14 @@
     <section class="about">
         <h2>About Me</h2>
         <P>I'm a software developer. I started coding in 
-            the FNB App Academy 2025!
-        </P>
+            the FNB App Academy 2025!</P>
+
         </section>
             
 
         <section class="projects">
             <h2>My Projects</h2>
+            
 
             </section>
                 <li>Portfolio website</li>
